--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,13 @@
             <artifactId>jsf-api</artifactId>
             <version>2.2.20</version>
         </dependency>
-        <dependency>
-            <groupId>com.sun.faces</groupId>
-            <artifactId>jsf-impl</artifactId>
-            <version>2.2.20</version>
+         <dependency>
+        <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
         </dependency>
+    </dependencies>
 
         <!-- Hibernate -->
         <dependency>
